Update github actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,5 @@
+name: Publish to hex.pm
+
 on:
   push:
     tags:
@@ -10,6 +12,6 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Publish package to hex.pm
-        uses: wesleimp/action-publish-hex@v1
+        uses: wesleimp/action-publish-hex@v1.17.2
         env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
