--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,14 +4,30 @@ on:
   push:
     tags:
       - '*'
+
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out
-        uses: actions/checkout@v2
-
-      - name: Publish package to hex.pm
-        uses: dtraft/action-publish-hex@v1.17
-        env:
+    - uses: actions/checkout@v4
+    - name: Set up Elixir
+      uses: erlef/setup-beam@v1 # v1.16.0
+      with:
+        elixir-version: '1.17.2' # [Required] Define the Elixir version
+        otp-version: '26.0'      # [Required] Define the Erlang/OTP version
+    - name: Restore dependencies cache
+      uses: actions/cache@v3
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+    - name: Install dependencies
+      run: mix deps.get, deps.compile
+    - name: Build Package
+      run: mix hex.build
+    - name: Publish Package
+      run: mix hex.publish --yes
+      env:
           HEX_API_KEY: ${{ secrets.HEX_API_KEY }}
+          
+        
